# aws-container-builder

./: .gitignore  Cargo.toml  README.md  builder  local_deploy.sh
example_proj/: .dockerignore  Dockerfile  remote-script.sh
resources/: instance-cfn.yml  role-cfn.yml  role_policy.template.json
scripts/: add_account.sh  bootstrap.sh  find_files_in_dir.py  zip_and_ship.sh
src/: bootstrap.rs  cfn_deploy.rs  connect.rs  get_stack_ip.rs  main.rs  ship.rs  ssh_client.rs  tag.rs  test.rs  uninstall.rs
src/cli/: add_account.rs  bootstrap.rs  connect.rs  mod.rs  ship.rs  start.rs  stop.rs  uninstall.rs
src/entities/: cfn_client.rs  config.rs  docker_ignore.rs  ec2_client.rs  instance_client.rs  mod.rs  ssh_client.rs  sts_client.rs
src/subcommands/: add_account.rs  bootstrap.rs  connect.rs  mod.rs  ship.rs  start.rs  stop.rs  uninstall.rs
