[package]
name = "builder"
version = "0.1.0"
authors = ["guydunton <guydunton@economist.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
rusoto_core = "0.43.0"
rusoto_ec2 = { version = "0.43.0", features = [ "serialize_structs" ] }
rusoto_cloudformation = "0.43.0"
tokio = "0.2.18"
chrono = "0.4.11"
rusoto_mock = "0.43.0"
serde = "1.0.106"
serde_json = "1.0.51"
