[package]
name = "builder"
version = "0.2.0"
authors = ["guydunton <guydunton@economist.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
rusoto_core = "0.43.0"
rusoto_ec2 = { version = "0.43.0", features = [ "serialize_structs" ] }
rusoto_cloudformation = "0.43.0"
rusoto_sts = "0.43.0"
futures = "0.3.5"
tokio = { version = "0.2.18", features = ["macros"] }
chrono = "0.4.11"
rusoto_mock = "0.43.0"
serde = "1.0.106"
serde_yaml = "0.8.11"
ssh2 = "0.8.0"
flate2 = "1.0.14"
tar = "0.4.26"
regex = "1"
async-trait = "0.1.30"
